# Mawjood

./: .bazelversion  .dockerignore  .gitignore  BUILD.bazel  DEPLOYMENT-FILES.md  DEPLOYMENT-GUIDE.md  Dockerfile.cms  Dockerfile.discovery  MODULE.bazel  README.md  SERVER-SETUP.md  Taskfile.yml  build-and-push.sh  db_setup.sql  deploy-prod.sh  docker-compose.prod.yml  docker-compose.yml  folder-structure.md  go.mod  go.sum  nginx-mawjood-fixed.conf  nginx-mawjood-grpcui.conf  nginx-mawjood-post-ssl.conf  nginx-mawjood.conf  notes.md  progress.md  setup_db.sh  system-design.md
.cursor/rules/: folder-structure.mdc  progress.mdc  system-design.mdc
.task/checksum/: proto-build
docs/: docs.md  folder-structure.md
nginx/: nginx.conf
nginx/sites-available/: mawjood-internal.conf  mawjood.conf
