module(
    name = "mawjood"
)

bazel_dep(name = "rules_go", version = "0.55.1")
bazel_dep(name = "gazelle", version = "0.44.0")
bazel_dep(name = "rules_proto", version = "7.0.2")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution
# platforms, using the version given from the `go.mod` file.
go_sdk.from_file(go_mod = "//:go.mod")

# Download an SDK for the host OS & architecture as well as common remote execution
# platforms, with a specific version.
go_sdk.download(version = "1.23.1")

# Configure Gazelle to generate protobuf rules
gazelle = use_extension("@gazelle//:extensions.bzl", "gazelle")

# Configure protobuf toolchain
protobuf = use_extension("@rules_proto//proto:extensions.bzl", "protobuf")
protobuf.deps()
protobuf.register_toolchains()
