module(
    name = "mawjood",
)

bazel_dep(name = "rules_go", version = "0.55.1")
bazel_dep(name = "gazelle", version = "0.44.0")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "protobuf", version = "30.1")
bazel_dep(name = "protoc-gen-validate", version = "1.2.1.bcr.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")
go_sdk.download(version = "1.23.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_data_dog_go_sqlmock",
    "com_github_lib_pq",
    "com_github_stretchr_testify",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
)
